# par_cc_usage

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  agent.jsonl  cc_data_structure.md  cc_status_line_doc.md  claude_data_structure.md  debug_cost.py  par_cc_usage_analysis_report.md  pyproject.toml  release_announcement.md  ruff.toml
.claude/commands/: commit_push.md  fix_block_time.md  update_tests_docs.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-python-uv/: action.yml
.github/actions/validate-version/: action.yml
.github/workflows/: build.yml  deploy.yml  publish-dev.yml  publish.yml  release.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  DISPLAY_FEATURES.md  DOCUMENTATION_UPDATE_SUMMARY.md  FEATURES.md  TROUBLESHOOTING.md  USAGE_GUIDE.md
src/par_cc_usage/: __init__.py  commands.py  config.py  display.py  emoji_config.py  enums.py  json_models.py  list_command.py  main.py  models.py  options.py  pricing.py  statusline_manager.py  theme.py  token_calculator.py
tests/: __init__.py  conftest.py  test_auto_scaling.py  test_cli_integration.py  test_commands.py  test_commands_focused.py  test_config.py  test_config_migration.py  test_configuration_edge_cases.py  test_debug_commands_edge_cases.py  test_display.py  test_display_error_handling.py  test_display_focused.py  test_emoji_config.py  test_entry_point_and_emoji.py  test_enums.py  test_file_monitor.py  test_file_processing_resilience.py  test_json_analyzer.py  test_last_message_time.py  test_list_command.py  test_main.py  test_main_focused.py  test_main_simple.py  test_models.py  test_monitor_stability.py  test_notification_manager.py  test_options.py  test_pricing.py  test_pricing_error_handling.py  test_statusline_basic.py  test_statusline_conditional_fetch.py  test_statusline_config_reload.py  test_statusline_git_config.py  test_statusline_model.py  test_statusline_new_vars.py  test_statusline_separator.py  test_statusline_session_tokens.py  test_statusline_template.py  test_statusline_windows_paths.py  (+11 more)
tests/fixtures/: complex_scenarios.jsonl  duplicate_messages.jsonl  edge_cases.jsonl  malformed.jsonl  sample.jsonl
tests/integration/: __init__.py  test_end_to_end.py
tests/performance/: __init__.py  test_large_datasets.py
tests/utils/: __init__.py  mock_helpers.py
