[project]
name = "par-cc-usage"
dynamic = ["version"]
description = "Claude Code usage tracking tool with real-time monitoring and analysis"
readme = "README.md"
url = "https://github.com/paulrobello/par_cc_usage"
authors = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
maintainers = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Topic :: Terminals",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = [
    "claude",
    "claude-code",
    "anthropic",
    "token-usage",
    "monitoring",
    "cli",
    "terminal",
    "usage-tracking",
    "real-time",
]
requires-python = ">=3.11"
dependencies = [
    "rich>=14.3.1",
    "typer>=0.21.1",
    "pyyaml>=6.0.3",
    "pydantic>=2.12.5",
    "watchdog>=6.0.0",
    "aiofiles>=25.1.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "xdg-base-dirs>=6.0.2",
    "aiohttp>=3.13.3",
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/paulrobello/par_cc_usage"
Documentation = "https://github.com/paulrobello/par_cc_usage/blob/main/README.md"
Source = "https://github.com/paulrobello/par_cc_usage"
Issues = "https://github.com/paulrobello/par_cc_usage/issues"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project.scripts]
pccu = "par_cc_usage.main:main"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "types-pytz>=2025.2.0.20250516",
    "types-requests>=2.32.0.20250602",
    "types-pyyaml>=6.0.12.20250516",
    "pre-commit>=4.5.1",
    "ruff>=0.14.14",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "hatchling>=1.27.0",
    "build>=1.2.2.post1",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/par_cc_usage",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/par_cc_usage",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]
exclude = [
    "*.pyc",
    "__pycache__",
    "*.so",
    "*.dylib",
]


[tool.hatch.version]
path = "src/par_cc_usage/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
